changed slider color, fixed infobox layout issue, fixed small bug in grantschart and changed line color

--- a/src/containers/App/App.module.scss
+++ b/src/containers/App/App.module.scss
@@ -27,11 +27,9 @@
 
   .aggregateKTHDataView {
     border-radius:10px;
-    display:flex; 
+    display:flex;
+    align-items: center;
     background-color:#E8E8E8
   }
-
-
-
 
 }
